1-added feature for showing lastPrice on Edit product component 2- changed login UI colors to GREEN

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ code {
   );
 
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+  background: linear-gradient(to right, #85c226, #85c227, #85c228, #85c229);
 }
 
 @media (min-width: 768px) {
